--- a/LocationApp-main/package.json
+++ b/LocationApp-main/package.json
@@ -22,5 +22,9 @@
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "@types/google.maps": "^3.51.1",
+    "axios": "^1.3.2"
   }
 }
