--- a/REST_TypeScript/package.json
+++ b/REST_TypeScript/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +15,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.14.2",
     "nodemon": "^2.0.20"
   }
 }
