--- a/REST_TypeScript/package.json
+++ b/REST_TypeScript/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.1.0",
+    "mongoose": "^7.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
